Release Notes
=============
The following TLAs are used:-
NBC - Not Backward Compatible with previous version of the framework.

Release 0.17.0
--------------------

Release 0.16.3
--------------------
- added sonatype repository distribution management in the pom.xml

Release 0.16.2
--------------------
 - Added MonitorEmailNotifier. A new MonitorListener implementation that sends emails when Initiator is in error to a preconfigured recipient list.
 - Changed MessageDrivenInitiatorFactoryBean to enable Point-To-Point JMS domain support. Default is Pub/Sub.
 - Updated DatabasePayloadProvider to check for nulls on the constructor and reduce logging noise by changing some INFOs to DEBUG.
 
Release 0.16.1
--------------------
 - added support for JndiDestinationFactory to JMSPayloadPublisher
 - defaulted maxRetries for message driven initiator listener setup failure to indefinite, and added setter method to allow overrides to default values

Release 0.16.0
--------------------
 - Changed MessageDrivenInitiatorFactoryBean to enable subscription to queues.
 - Refactored Schedule driven Initiators and JMS Driven Initiators to share common base class encapsulating much state functionality
 - Changed all Initiators to be stopped following Initialisation, and to be started when appropriate by the ModuleInitialisationService
 - Added persistence of start and stop calls to ModuleService to be considered during startup
 - Added options to defer Destination JNDI lookup for both JMS publishers and subscribers to runtime, rather than initialisation time to break dependecies on JMS servers
 - Changed JMS Initiators to detect failures setting up listener container (ie failure to poll server) to drop into Recovery mode
 
Release 0.15.3
--------------------
- New PayloadPublisher implementation: JMSPayloadPublisher. Publishes a payload to jms destination either as MapMessage or TextMessage.

Release 0.15.2
--------------------